# rpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
extensions/notepad++/: rules++.xml  rules++_syntax.xml
extensions/vs code/: rpp-1.0.0.vsix  rpp-1.0.1.vsix
include/: abstractsyntaxtree.hpp  abstractsyntaxtreevisitor.hpp  aliases.hpp  app.hpp  automapper.hpp  basicstream.hpp  cli.hpp  enums.hpp  error.hpp  erroroutput.hpp  errorqueue.hpp  expect.hpp  externalresource.hpp  inputstream.hpp  io.hpp  iresult.hpp  parser.hpp  parsetree.hpp  parsetreevisitor.hpp  preprocessor.hpp  rulesgen.hpp  signature.hpp  token.hpp  tokenh.hpp  tokenizer.hpp  tokenliterals.hpp  tokenstream.hpp  translator.hpp  utility.hpp  valuetypes.hpp
rules++/: base.p  base.r
src/: abstractsyntaxtree.cpp  abstractsyntaxtreevisitor.cpp  app.cpp  error.cpp  erroroutput.cpp  errorqueue.cpp  expect.cpp  externalresource.cpp  io.cpp  main.cpp  parser.cpp  parsetree.cpp  parsetreevisitor.cpp  preprocessor.cpp  rulesgen.cpp  signature.cpp  token.cpp  tokenh.cpp  tokenizer.cpp  translator.cpp  utility.cpp  valuetypes.cpp
utilities/notepad++/: rules++.xml  rules++_syntax.xml
utilities/vs code/: rpp-1.0.0.vsix
